Tilføjer mappe med billeder

--- a/style.css
+++ b/style.css
@@ -1,3 +1,5 @@
+/* Importing my font from google fonts*/
+
 @import url('https://fonts.googleapis.com/css2?family=Montserrat+Alternates:wght@400;500&family=Montserrat:wght@500&display=swap');
 
 *{
