--- a/style.css
+++ b/style.css
@@ -23,3 +23,82 @@ body{
     height: 100vh;
 
 }
+
+/* Styling my navigationbar and logo */
+
+nav{
+    position: fixed;
+    top: 0;
+    z-index: 2000;
+    height: 80px;
+    width: 100%;
+}
+
+label.logo{
+    padding: 0 20px;
+}
+
+label.logo2{
+    display: none;
+}
+
+nav ul{
+    float: right;
+    margin-left: 20px;
+}
+
+nav ul li{
+    display: inline-block;
+    line-height: 80px;
+    margin: 0 20px;
+}
+
+nav ul li a{
+    color: white;
+    font-size: 15px;
+    font-weight: 500;
+}
+
+.checkbtn{
+    font-size: 30px;
+    color: white;
+    float: right;
+    line-height: 80px;
+    margin-right: 40px;
+    display: none;
+}
+
+#check{
+    display: none;
+}
+
+.btn1{
+    font-family: 'Montserrat Alternates', sans-serif;;
+    background: none;
+    color: white;
+    text-decoration: none;
+    border: 2px solid;
+    font-weight: bold;
+    padding: 10px 20px;
+    border-radius: 20px;
+    letter-spacing: 2px;
+    font-size: 13px;
+    margin-right: 20px;
+    cursor: pointer;
+}
+
+.btn2{
+    font-family: 'Montserrat Alternates', sans-serif;;
+    background: #FAF33E;
+    color: #2F3032;
+    text-decoration: none;
+    border: 2px solid;
+    border-color: #FAF33E;
+    font-weight: bold;
+    padding: 10px 20px;
+    border-radius: 20px;
+    letter-spacing: 2px;
+    font-size: 13px;
+    margin-right: 20px;
+    cursor: pointer;
+}
