--- a/style.css
+++ b/style.css
@@ -26,6 +26,8 @@ body{
 
 /* Styling my navigationbar and logo */
 
+/* Styling nav, logo, ul, li and a */
+
 nav{
     position: fixed;
     top: 0;
@@ -59,6 +61,8 @@ nav ul li a{
     font-weight: 500;
 }
 
+/* Styling my burger-menu bars and gives it display none in dekstop version */
+
 .checkbtn{
     font-size: 30px;
     color: white;
@@ -71,6 +75,8 @@ nav ul li a{
 #check{
     display: none;
 }
+
+/* Styling my two buttons */ 
 
 .btn1{
     font-family: 'Montserrat Alternates', sans-serif;;
@@ -101,4 +107,73 @@ nav ul li a{
     font-size: 13px;
     margin-right: 20px;
     cursor: pointer;
+}
+
+/* Styling for my hero-section */ 
+
+/* Styling my container, hero & row with flexbox */ 
+
+.container{
+    max-width: 90%;
+    margin: 0 auto;
+    color: white;
+}
+
+.hero{
+    align-items: center;
+    flex-wrap: wrap-reverse;
+}
+
+.hero>*{
+    flex: 1 1 25em;
+}
+
+.row{
+    display: flex;
+}
+
+/* Styling for my heading & text */
+
+h1{
+    font-size: 48px;
+    margin-bottom: 2rem;
+    margin-left: 80px;
+}
+
+p{
+    font-size: 16px;
+    margin-left: 80px;
+}
+
+/* Styling for my two cta buttons */
+
+.container a.cta1{
+    background: #FAF33E;
+    color: #2F3032;
+    text-decoration: none;
+    border: 2px solid;
+    border-color: #FAF33E;
+    font-weight: bold;
+    padding: 15px 30px;
+    border-radius: 25px;
+    letter-spacing: 2px;
+    font-size: 13px;
+    margin-right: 20px;
+    cursor: pointer;
+    margin-left: 80px;
+}
+
+.container a.cta2{
+    background: none;
+    color: white;
+    text-decoration: none;
+    border: 2px solid;
+    font-weight: bold;
+    padding: 15px 25px;
+    border-radius: 25px;
+    letter-spacing: 2px;
+    font-size: 13px;
+    cursor: pointer;
+    display: inline-block;
+    margin-top: 2rem;
 }
