--- a/style.css
+++ b/style.css
@@ -177,3 +177,64 @@ p{
     display: inline-block;
     margin-top: 2rem;
 }
+
+/* Styling my solution-section */ 
+
+/* Adding background picture */ 
+
+.solution{
+    background: url(./Images/Rectangle-white3.jpg);
+    margin-top: 10%;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center center;
+}
+
+/* Using flexbox on the class main & graph */
+
+.main{
+    display: flex;
+}
+
+.graph{
+    flex: 60%;
+    padding: 5px;
+    text-align: center;
+    margin: -160px 0px 0px 0px;
+
+}
+
+/* Styling my heading, text and button*/ 
+
+h2{
+    color: #2F3032;
+    font-size: 24px;
+    margin-bottom: 35px;
+    margin-left: 80px;
+}
+
+p.info{
+    color: #2F3032;
+    font-size: 16px;
+    margin-bottom: 25px;
+}
+
+p.info1{
+    color: #2F3032;
+    font-size: 16px;
+    margin-bottom: 45px;
+}
+
+.cta3{
+    font-family: 'Montserrat Alternates', sans-serif;;
+    background: #0700F6;
+    color: white;
+    text-decoration: none;
+    border: 2px solid #0700F6;
+    padding: 15px 25px;
+    margin-left: 80px;
+    border-radius: 25px;
+    cursor: pointer;
+    margin-top: 2rem;
+}
+
