--- a/style.css
+++ b/style.css
@@ -405,3 +405,73 @@ p.info8{
 .mobile{
     display: none;
 }
+
+/* Styling for the clietns-section */ 
+
+/* Adding background picture and setting the height */ 
+
+.clients{
+    background: url(./Images/Rectangle-587.jpg);
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center center;
+    height: 80vh;
+}
+
+/* Styling for the div and text */
+
+.text4{
+    text-align: center;
+    margin: 250px 10px 50px 10px;
+}
+
+p.info4{
+    color: #2F3032;
+    font-size: 16px;
+    margin-bottom: 45px;
+    text-align: center;
+}
+
+/* Styling my class with flexbox and adding a direction for the flex */
+
+.box{
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-around;
+}
+
+/* Styling for my cards */
+
+.card{
+    background: white;
+    color: black;
+    width: 250px;
+    height: 340px;
+    margin: 10px;
+    border-radius: 10%;
+    box-shadow: 0px 2px 4px 1px rgba(190, 193, 202, 0.5); 
+}
+
+/* Styling for my text inside the cards */
+
+p.info5{
+    margin: 20px 35px 20px 35px;
+    padding: 0;
+    font-size: 12px;
+    text-align: left;
+    font-weight: bold;
+    position: relative;
+    top: 45%;
+    transform: translateY(-55%);
+    letter-spacing: 2px;
+}
+
+p.info6{
+    margin: 20px 35px 20px 35px;
+    padding: 0;
+    font-size: 12px;
+    text-align: left;
+    position: relative;
+    top: 30%;
+}
