--- a/style.css
+++ b/style.css
@@ -615,7 +615,7 @@ footer{
     color: #2F3032;
 }
 
-/* Adding my media quries, which makes all the elements in my code responsive in differnet viewports */ 
+/* Adding my media quries, which makes all the elements in my code responsive in different viewports */ 
 
 /* Making my navigation responsive */
 
@@ -693,5 +693,91 @@ footer{
         max-width: 90%;
         margin: 0 auto;
         color: white;
+    }
+}
+
+/* Adding my media quries, which makes all the elements in my code responsive in different viewports */ 
+
+/* Making text, buttons & cards responsive */
+
+@media screen and (max-width: 1285px){
+
+/* Setting the width for my picture in the hero-section */
+
+    .row img{
+        width: 100%;
+    }
+
+/* Changing the font-size for my headings */
+
+    h1{
+    font-size: 36px;
+    margin-top: 100px;
+    }
+
+    h2{
+        font-size: 20px;
+    }
+
+/* Changing the font-size for my text */
+
+    p.info, p.info1, p.info2, p.info3, p.info4, p.info5, p.info6, p.info7, p.info8{
+        font-size: 13px;
+    }
+
+/* Adding padding for my button & changing the font-size */ 
+
+    .cta3, .cta4, .cta5, .container a.cta1, .container a.cta2{
+        padding: 10px 25px;
+        font-size: 10px;
+    }
+
+/* Placing my text with margin */
+
+    .text{
+        margin: 50px 100px 0px 0px ;
+    }
+
+    .text2{
+        margin: 250px 0px 0px 0px;
+    }
+
+    .text3{
+        flex: 50%;
+        margin: 165px 100px 0px 0px;
+    }
+
+    .text5{
+        margin: 450px 100px 0px 0px;
+    }
+
+/* Adding margin for footer links */
+
+    .links p{
+        margin: 15px 0px 0px 150px;
+    }
+
+/* Giving my div box flex-direction */
+
+    .box{
+        flex-direction: row;
+    }
+
+/* Adding margin for cards */
+
+    .card{
+        margin: 10px 10px 10px 10px;
+    }
+
+/* Removing margin for my div */
+
+    .graph{
+        margin: 0;
+    }
+
+/* Increasing the hieght for background */
+
+    .clients{
+        height: 115vh;
     }
 }
